# mp3-metadata

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/workflows/: CI.yml
benches/: basic.rs
examples/: Cargo.toml
examples/src/: basic.rs
src/: consts.rs  enums.rs  lib.rs  metadata.rs  types.rs  utils.rs
tests/: basic.rs  common.rs  error_check.rs  id3v2.rs  invalid_time.rs  truncate.rs
