[package]
name = "mp3-metadata"
version = "0.3.4"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]
rust-version = "1.31"
edition = "2018"

description = "Metadata parser for MP3 files"
repository = "https://github.com/GuillaumeGomez/mp3-metadata"
license = "MIT"

keywords = ["mp3", "metadata"]

[lib]
name = "mp3_metadata"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
simplemad = "0.9"
