[package]
name = "mp3-metadata-example"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]
version = "0.1.0"

description = "Metadata parser for MP3 files"
repository = "https://github.com/GuillaumeGomez/mp3-metadata"
license = "MIT"

[[bin]]
name = "basic"

[dependencies]
mp3-metadata = { path = "../" }
